Config/infra1/k8s-test/order-service.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: order-service
        image: harbor.thienngo.click/devsecops-test/microservice/order-service:0.0.4
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 1m
            memory: 50Mi
          limits:
            cpu: 75m
            memory: 128Mi
        startupProbe:
          httpGet:
            path: /health
            port: 3000
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          failureThreshold: 3
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          failureThreshold: 5
          initialDelaySeconds: 3
          periodSeconds: 3
        securityContext: 
          allowPrivilegeEscalation: false
      imagePullSecrets:
      - name: harbor-cred
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: testing
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: order-service
---
