Config/infra1/k8s-test/store-front.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-front
  namespace: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-front
  template:
    metadata:
      labels:
        app: store-front
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: store-front
        image: harbor.thienngo.click/devsecops-test/microservice/store-front:0.0.1
        ports:
        - containerPort: 8080
          name: store-front
        resources:
          requests:
            cpu: 1m
            memory: 200Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        startupProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 3
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 5
          initialDelaySeconds: 3
          periodSeconds: 3
        securityContext: 
          allowPrivilegeEscalation: false
      imagePullSecrets:
      - name: harbor-cred
---
apiVersion: v1
kind: Service
metadata:
  name: store-front
  namespace: testing
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: store-front
