Config/infra1/k8s-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - longndb.site
    secretName: longndb-site-tls
  rules:
  - host: longndb.site
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: store-front
              port:
                number: 80
        - pathType: Prefix
          path: "/order-service"
          backend:
            service:
              name: order-service
              port:
                number: 3000
        - pathType: Prefix
          path: "/product-service"
          backend:
            service:
              name: product-service
              port:
                number: 3002
        - pathType: Prefix
          path: "/rabbitmq"
          backend:
            service:
              name: rabbitmq
              port:
                number: 15672
